--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "express": "~4.15.2",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
+    "mysql2": "^1.4.1",
+    "sequelize": "^4.5.0",
+    "sequelize-cli": "^2.8.0",
+    "sequelize-cmd": "0.0.9",
     "serve-favicon": "~2.4.2"
   }
 }
